Got some more steps passing.

--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -1,1 +1,10 @@
 <a href="#">Add Scenario</a>
+
+<div id="create_scenario">
+  <form>
+    <input id="feature_name" type="text"></input>
+    <input id="scenario_name" type="text"></input>
+    <input id="scenario_body" type="text"></input>
+    <a href="#">Create Scenario</a>
+  </form>
+</div>
