Got the second scenario passing.

--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -16,6 +16,7 @@
         <%= text_area_tag :scenario_body %>
       </p>
       <%= submit_tag "Create Scenario" %>
+      <input type="button" value="Cancel"/>
     </fieldset>
   <% end %>
 </div>
