--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -76,7 +76,8 @@
 <button id="add_scenario" class="fg-button ui-state-default ui-corner-all">Add Scenario</button>
 <button id="run_scenarios" class="fg-button ui-state-default ui-corner-all">Run Scenarios</button>
 
-<%= form_tag ({:controller => :home, :action => :index}, :id => "run_all_form") %>
+<% form_tag ({:controller => :home, :action => :index}, :id => "run_all_form") do %>
+<% end %>
 
 <div id="create_scenario" title="Add a scenario">
   <% form_tag ({:controller => :scenarios, :action => :create}, :id => "create_scenario_form") do %>
